--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="container1">
-  <img src="./assets/images/Christian Kimbrough 2.jpg" alt="La'Brea Rashad">
+  <img src="./assets/images/Christian Kimbrough 2.jpg" alt="Christian Kimbrough">
 
   <div class="intro">
   <h2>Christian Kimbrough</h2>
