--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 </head>
 <body>
 
-<div class="container1">
-  <img src="./assets/images/Christian Kimbrough 2.jpg" alt="Christian Kimbrough">
+<div class="container">
+  
+  <div class="card">
+    <img src="./assets/images/Christian Kimbrough 2.jpg" alt="Christian Kimbrough">
+  <h1>Christian Kimbrough</h1>
+  <h2>Dallas, TX</h2> 
+  <p>"Gun Violence Survivor and Speaker."</p>
+  
 
-  <div class="intro">
-  <h2>Christian Kimbrough</h2>
-  <p style="color: hsl(75, 94%, 57%)">Dallas, TX</p> 
-  <p style="letter-spacing: 2px;"><small>"Gun Violence Survivor and Speaker."</small></p>
-  </div>
-
-<div class="container3">
-  <div class="container2">
-  <button>GitHub</button>
-  <a href="https://www.linkedin.com/in/christian-kimbrough-185689116/" target="_blank"><button>LinkedIn</button></a>
-  <button>Twitter</button>
-  <button>Instagram</button>
+<div class="buttons">
+  <a href="#">GitHub</a>
+  <a href="#">Frontend Mentor</a>
+  <a href="#">LinkedIn</a>
+  <a href="#">Twitter</a>
+  <a href="#">Instagram</a>
 </div>
 </div>
 </div>
